--- a/burger-queen9/src/routes/noAuthRoutes/Login.css
+++ b/burger-queen9/src/routes/noAuthRoutes/Login.css
@@ -1,10 +1,10 @@
-main {
+.mainLogin {
     display: flex;
     height: 100vh;
     width: 100vw;
 }
 
-header {
+.headerLogin {
     background-color: #334249;
     height: 13vh;
 }
