--- a/burger-queen9/src/routes/authRoutes/waiter/AddOrder.css
+++ b/burger-queen9/src/routes/authRoutes/waiter/AddOrder.css
@@ -14,7 +14,6 @@
 
 .lunchdinner {
     border-color: rgba(137, 43, 226, 0.623);
-    border-style: ;
     margin: 2vh 2vw;
     width: 20vw;
     /* align-content: flex-start; */
@@ -70,4 +69,16 @@
     width: 38vw;
     justify-content: space-between;
     padding-right: 2vw;
+}
+.confirmOrden{
+    display: flex;
+    justify-items: end;
+}
+
+.confirmOrdenButton{
+    margin-right: 2vw;
+    margin-bottom: 2vw;
+    background: #7F9B72;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 5px; 
 }
